fix: signature band image use px margins to preserve container spacing

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -691,9 +691,9 @@ h1 span {
 
 .signature-band img {
   width: min(100%, 310px);
-  margin-left: -6.6%;
-  margin-top: -10%;
-  margin-bottom: -10%;
+  margin-left: -20px;
+  margin-top: -20px;
+  margin-bottom: -20px;
 }
 
 .signature-band h2 {
